--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .col{
     display: flex;
+    justify-content: center;
+}
+
+.posts{
+    background-color: antiquewhite;
+}
+
+.comments{
+    background-color: coral;
 }
