--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0c0c0c;
+    background-color: #121212;
     height: 60px;
     column-gap: 30px;
 }
