--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -1,9 +1,11 @@
 .movies{
     display: flex;
-    width: 900px;
+
     flex-wrap: wrap;
     justify-content: center;
-    gap: 22px;
-    border-right: 2px solid #24252A;
-    margin-top: 146px;
+    row-gap: 62px;
+    column-gap: 32px;
+    margin-bottom: 100px;
+
+
 }
