--- a/src/components/Movie/movie.module.css
+++ b/src/components/Movie/movie.module.css
@@ -5,6 +5,7 @@
     border-radius: 6px;
 
 
+
     box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.3);
     -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.3);
@@ -17,6 +18,11 @@
 
 }
 
+.stars{
+    display: flex;
+    justify-content: center;
+    margin-top: 26px;
+}
 
 .card_img img {
     height: 450px;
@@ -28,10 +34,11 @@
     justify-content: center;
     align-items: center;
     width: 236px;
-    height: 150px;
+
     font-size: 24px;
     font-weight: 600;
     line-height: 29px;
+   margin: 24px 24px 50px;
 
     color: #E3F9FF;
 }
